Cover photo, reformatting.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
 
   <body>
 
+    <section id="cover">
+      <div class="container">
+
+        <h1><span class="lead">Otázky referenda</span>o&nbsp;poloze nádraží 7.&nbsp;a&nbsp;8.&nbsp;října v&nbsp;budovách krajských&nbsp;voleb</h1>
+
+      </div>
+    </section>
+
     <section id="content">
       <div class="container">
 
-        <h1>Otázky referenda o poloze nádraží 7.&nbsp;a&nbsp;8.&nbsp;října v&nbsp;budovách krajských voleb</h1>
-
-        <h2>Souhlasíte s&nbsp;tím, aby město Brno podniklo bezodkladně všechny kroky v&nbsp;samostatné působnosti k&nbsp;modernizaci železniční stanice Brno ­hlavní nádraží v&nbsp;dosavadní poloze podél ulice Nádražní?</h2>
+        <h2 class="tight">Souhlasíte s&nbsp;tím, aby město Brno podniklo bezodkladně všechny kroky v&nbsp;samostatné působnosti k&nbsp;modernizaci železniční stanice Brno ­hlavní nádraží v&nbsp;dosavadní poloze podél ulice Nádražní?</h2>
         <p class="lead">Tato otázka nám umožní rozhodnout o&nbsp;tom, kde se bude nádraží modernizovat.</p>
         <p class="lead"><strong>Pokud jste přesvědčeni, že nádraží má i&nbsp;nadále stát v&nbsp;centru města v&nbsp;ulici Nádražní, pak hlasujte ANO.</strong> Hlasujete tak pro variantu „pod Petrovem“, kdy vznikne druhá nádražní budova vedle současné pošty v&nbsp;místech stávající 5. a&nbsp;6. koleje.</p>
         <p class="lead">Současná historická budova však i&nbsp;nadále bude plnit svou funkci a&nbsp;vynikající návaznost vlakové a&nbsp;hromadné dopravy zůstane zachována. Město navíc ušetří miliardy na nové infrastruktuře a&nbsp;cca&nbsp;150 milionů na propojení odsunutého nádraží s&nbsp;centrem města.</p>
