--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="description" content="">
     <meta name="author" content="">
-    <!-- <link rel="icon" href="assets/favicon.png"> -->
+    <link rel="icon" href="assets/favicon.png">
 
     <title>Otázky referenda o poloze nádraží 7. a 8. října</title>
 
