--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="cover">
       <div class="container">
 
-        <h1><span class="lead">Otázky referenda</span>o&nbsp;poloze nádraží 7.&nbsp;a&nbsp;8.&nbsp;října v&nbsp;budovách krajských&nbsp;voleb</h1>
+        <h1><span class="lead">Otázky referenda</span><span class="lead subtitle">o&nbsp;poloze nádraží</span> 7.&nbsp;a&nbsp;8.&nbsp;října v&nbsp;budovách krajských&nbsp;voleb</h1>
 
       </div>
     </section>
@@ -32,15 +32,20 @@
     <section id="content">
       <div class="container">
 
-        <h2 class="tight">Souhlasíte s&nbsp;tím, aby město Brno podniklo bezodkladně všechny kroky v&nbsp;samostatné působnosti k&nbsp;modernizaci železniční stanice Brno ­hlavní nádraží v&nbsp;dosavadní poloze podél ulice Nádražní?</h2>
-        <p class="lead">Tato otázka nám umožní rozhodnout o&nbsp;tom, kde se bude nádraží modernizovat.</p>
-        <p class="lead"><strong>Pokud jste přesvědčeni, že nádraží má i&nbsp;nadále stát v&nbsp;centru města v&nbsp;ulici Nádražní, pak hlasujte ANO.</strong> Hlasujete tak pro variantu „pod Petrovem“, kdy vznikne druhá nádražní budova vedle současné pošty v&nbsp;místech stávající 5. a&nbsp;6. koleje.</p>
-        <p class="lead">Současná historická budova však i&nbsp;nadále bude plnit svou funkci a&nbsp;vynikající návaznost vlakové a&nbsp;hromadné dopravy zůstane zachována. Město navíc ušetří miliardy na nové infrastruktuře a&nbsp;cca&nbsp;150 milionů na propojení odsunutého nádraží s&nbsp;centrem města.</p>
-
-        <h2>Souhlasíte s&nbsp;tím, aby město Brno podniklo bezodkladně všechny kroky v&nbsp;samostatné působnosti s&nbsp;cílem prosadit, aby se nejlepší řešení modernizace železniční stanice „Brno ­hlavní nádraží“ určilo prostřednictvím soustavy otevřených návrhových soutěží?</h2>
-        <p class="lead">Tato otázka zaváže město k&nbsp;odpovědnému, transparentnímu a&nbsp;otevřenému způsobu výběru nejlepšího řešení modernizace železničního uzlu v té poloze, kterou zvolíme hlasováním v&nbsp;otázce předchozí.</p>
-        <p class="lead">Pokud tedy většina Brňanů zvolí „nádraží v&nbsp;centrální poloze pod Petrovem – v&nbsp;ulici Nádražní“, město bude vycházet například z&nbsp;výsledků mezinárodní otevřené urbanistické soutěže Budoucnost centra Brna, kterou zahraniční porota ocenila jako jednu z&nbsp;nejlépe připravených.</p>
-        <p class="lead"><strong>Odpovědí ANO na tuto otázku tedy zajistíme transparentní řešení přestavby uzlu bez korupce a&nbsp;klientelismu.</strong></p>
+        <ol>
+          <li class="lead">
+            <h2 class="tight">Souhlasíte s&nbsp;tím, aby město Brno podniklo bezodkladně všechny kroky v&nbsp;samostatné působnosti k&nbsp;modernizaci železniční stanice Brno ­hlavní nádraží v&nbsp;dosavadní poloze podél ulice Nádražní?</h2>
+            <p class="lead">Tato otázka nám umožní rozhodnout o&nbsp;tom, kde se bude nádraží modernizovat.</p>
+            <p class="lead"><strong>Pokud jste přesvědčeni, že nádraží má i&nbsp;nadále stát v&nbsp;centru města v&nbsp;ulici Nádražní, pak hlasujte ANO.</strong> Hlasujete tak pro variantu „pod Petrovem“, kdy vznikne druhá nádražní budova vedle současné pošty v&nbsp;místech stávající 5. a&nbsp;6. koleje.</p>
+            <p class="lead">Současná historická budova však i&nbsp;nadále bude plnit svou funkci a&nbsp;vynikající návaznost vlakové a&nbsp;hromadné dopravy zůstane zachována. Město navíc ušetří miliardy na nové infrastruktuře a&nbsp;cca&nbsp;150 milionů na propojení odsunutého nádraží s&nbsp;centrem města.</p>
+          </li>
+          <li class="lead">
+            <h2>Souhlasíte s&nbsp;tím, aby město Brno podniklo bezodkladně všechny kroky v&nbsp;samostatné působnosti s&nbsp;cílem prosadit, aby se nejlepší řešení modernizace železniční stanice „Brno ­hlavní nádraží“ určilo prostřednictvím soustavy otevřených návrhových soutěží?</h2>
+            <p class="lead">Tato otázka zaváže město k&nbsp;odpovědnému, transparentnímu a&nbsp;otevřenému způsobu výběru nejlepšího řešení modernizace železničního uzlu v té poloze, kterou zvolíme hlasováním v&nbsp;otázce předchozí.</p>
+            <p class="lead">Pokud tedy většina Brňanů zvolí „nádraží v&nbsp;centrální poloze pod Petrovem – v&nbsp;ulici Nádražní“, město bude vycházet například z&nbsp;výsledků mezinárodní otevřené urbanistické soutěže Budoucnost centra Brna, kterou zahraniční porota ocenila jako jednu z&nbsp;nejlépe připravených.</p>
+            <p class="lead"><strong>Odpovědí ANO na tuto otázku tedy zajistíme transparentní řešení přestavby uzlu bez korupce a&nbsp;klientelismu.</strong></p>
+          </li>
+        </ol>
 
       </div>
     </section>
