--- a/index.html
+++ b/index.html
@@ -35,30 +35,28 @@
         <ol>
           <li class="lead">
             <h2 class="tight">Souhlasíte s&nbsp;tím, aby město Brno podniklo bezodkladně všechny kroky v&nbsp;samostatné působnosti k&nbsp;modernizaci železniční stanice Brno ­hlavní nádraží v&nbsp;dosavadní poloze podél ulice Nádražní?</h2>
-            <p class="lead">Tato otázka nám umožní rozhodnout o&nbsp;tom, kde se bude nádraží modernizovat.</p>
-            <p class="lead"><strong>Pokud jste přesvědčeni, že nádraží má i&nbsp;nadále stát v&nbsp;centru města v&nbsp;ulici Nádražní, pak hlasujte ANO.</strong> Hlasujete tak pro variantu „pod Petrovem“, kdy vznikne druhá nádražní budova vedle současné pošty v&nbsp;místech stávající 5. a&nbsp;6. koleje.</p>
-            <p class="lead">Současná historická budova však i&nbsp;nadále bude plnit svou funkci a&nbsp;vynikající návaznost vlakové a&nbsp;hromadné dopravy zůstane zachována. Město navíc ušetří miliardy na nové infrastruktuře a&nbsp;cca&nbsp;150 milionů na propojení odsunutého nádraží s&nbsp;centrem města.</p>
+            <p class="lead">Tato otázka nám umožní rozhodnout o&nbsp;tom, kde se bude nádraží modernizovat. <strong>Pokud jste přesvědčeni, že nádraží má i&nbsp;nadále stát v&nbsp;centru města v&nbsp;ulici Nádražní, pak hlasujte ANO.</strong> Hlasujete tak pro variantu „pod Petrovem“, kdy vznikne druhá nádražní budova vedle současné pošty v&nbsp;místech stávající 5.&nbsp;a&nbsp;6.&nbsp;koleje.</p>
+            <p class="lead">Současná historická budova však i&nbsp;nadále bude plnit svou funkci a&nbsp;<strong>vynikající návaznost vlakové a&nbsp;hromadné dopravy zůstane zachována</strong>. Město navíc ušetří miliardy na nové infrastruktuře a&nbsp;cca 150 milionů na propojení odsunutého nádraží s&nbsp;centrem města.</p>
           </li>
           <li class="lead">
             <h2>Souhlasíte s&nbsp;tím, aby město Brno podniklo bezodkladně všechny kroky v&nbsp;samostatné působnosti s&nbsp;cílem prosadit, aby se nejlepší řešení modernizace železniční stanice „Brno ­hlavní nádraží“ určilo prostřednictvím soustavy otevřených návrhových soutěží?</h2>
-            <p class="lead">Tato otázka zaváže město k&nbsp;odpovědnému, transparentnímu a&nbsp;otevřenému způsobu výběru nejlepšího řešení modernizace železničního uzlu v té poloze, kterou zvolíme hlasováním v&nbsp;otázce předchozí.</p>
-            <p class="lead">Pokud tedy většina Brňanů zvolí „nádraží v&nbsp;centrální poloze pod Petrovem – v&nbsp;ulici Nádražní“, město bude vycházet například z&nbsp;výsledků mezinárodní otevřené urbanistické soutěže Budoucnost centra Brna, kterou zahraniční porota ocenila jako jednu z&nbsp;nejlépe připravených.</p>
-            <p class="lead"><strong>Odpovědí ANO na tuto otázku tedy zajistíme transparentní řešení přestavby uzlu bez korupce a&nbsp;klientelismu.</strong></p>
+            <p class="lead">Tato otázka zaváže město k&nbsp;<strong>odpovědnému, transparentnímu a&nbsp;otevřenému způsobu výběru nejlepšího řešení</strong> modernizace železničního uzlu v&nbsp;té poloze, kterou zvolíme hlasováním v&nbsp;otázce předchozí.</p>
+            <p class="lead">Pokud tedy většina Brňanů zvolí „nádraží v centrální poloze pod Petrovem – v&nbsp;ulici Nádražní“, město bude vycházet například z&nbsp;výsledků mezinárodní otevřené urbanistické soutěže <strong><a href="http://www.budoucnostcentrabrna.cz/">Budoucnost centra Brna</a></strong>, kterou zahraniční porota ocenila jako jednu z&nbsp;nejlépe připravených.</p>
           </li>
         </ol>
 
       </div>
     </section>
 
-    <footer>
+    <!-- <footer>
        <div class="container">
 
-         <a href="http://www.nadrvcentru.cz/jo/" id="nadrvcentru">
-           <span>www.nadrvcentru.cz</span>
+         <a href="#">
+           <span>...</span>
          </a>
 
       </div>
-    </footer>
+    </footer> -->
 
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script> -->
     <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> -->
