Content and style update.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="assets/favicon.png">
 
-    <title>Otázky referenda o poloze nádraží 7. a 8. října</title>
+    <title>Otázky referenda o poloze nádraží 7. a 8. října 2016</title>
 
     <!-- Bootstrap core CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <section id="cover">
       <div class="container">
 
-        <h1><span class="lead">Otázky referenda</span><span class="lead subtitle">o&nbsp;poloze nádraží</span> 7.&nbsp;a&nbsp;8.&nbsp;října v&nbsp;budovách krajských&nbsp;voleb</h1>
+        <h1><span class="lead">Otázky referenda</span><span class="lead subtitle">o&nbsp;poloze nádraží</span> 7.&nbsp;a&nbsp;8.&nbsp;října 2016 v&nbsp;budovách krajských&nbsp;voleb</h1>
 
       </div>
     </section>
@@ -36,7 +36,7 @@
           <li class="lead">
             <h2 class="tight">Souhlasíte s&nbsp;tím, aby město Brno podniklo bezodkladně všechny kroky v&nbsp;samostatné působnosti k&nbsp;modernizaci železniční stanice Brno ­hlavní nádraží v&nbsp;dosavadní poloze podél ulice Nádražní?</h2>
             <p class="lead">Tato otázka nám umožní rozhodnout o&nbsp;tom, kde se bude nádraží modernizovat. <strong>Pokud jste přesvědčeni, že nádraží má i&nbsp;nadále stát v&nbsp;centru města v&nbsp;ulici Nádražní, pak hlasujte ANO.</strong> Hlasujete tak pro variantu „pod Petrovem“, kdy vznikne druhá nádražní budova vedle současné pošty v&nbsp;místech stávající 5.&nbsp;a&nbsp;6.&nbsp;koleje.</p>
-            <p class="lead">Současná historická budova však i&nbsp;nadále bude plnit svou funkci a&nbsp;<strong>vynikající návaznost vlakové a&nbsp;hromadné dopravy zůstane zachována</strong>. Město navíc ušetří miliardy na nové infrastruktuře a&nbsp;cca 150 milionů na propojení odsunutého nádraží s&nbsp;centrem města.</p>
+            <p class="lead">Současná historická budova však i&nbsp;nadále bude plnit svou funkci a&nbsp;<strong>vynikající návaznost vlakové a&nbsp;hromadné dopravy zůstane zachována</strong>.<sup>1</sup> Město navíc ušetří miliardy na nové infrastruktuře a&nbsp;cca 150 milionů na propojení odsunutého nádraží s&nbsp;centrem města.<sup>2</sup></p>
           </li>
           <li class="lead">
             <h2>Souhlasíte s&nbsp;tím, aby město Brno podniklo bezodkladně všechny kroky v&nbsp;samostatné působnosti s&nbsp;cílem prosadit, aby se nejlepší řešení modernizace železniční stanice „Brno ­hlavní nádraží“ určilo prostřednictvím soustavy otevřených návrhových soutěží?</h2>
@@ -48,20 +48,25 @@
       </div>
     </section>
 
-    <!-- <footer>
-       <div class="container">
+    <section id="footnotes">
+      <div class="container">
 
-         <a href="#">
-           <span>...</span>
-         </a>
+        <div class="fn">
+          <dt><sup>1</sup></dt>
+		      <dd id="fn1"><a href="https://drive.google.com/drive/u/0/folders/0B_0eV17ym8uQalhNaUl0X3BVQWs" target="_blank">Studie dostupnosti cílů ŽUB, Říha Košťál 2007</a></dd>
+        </div>
+        <div class="fn">
+          <dt><sup>2</sup></dt>
+		      <dd id="fn2"><a href="http://www.fi.muni.cz/~zlatuska/ZUB/Anal%FDza%20variant%20p%F8estavby%20_elezni%E8n%EDho%20uzlu%20Brno.pdf" target="_blank">CityPlan, ČVUT 2007: str. 56-57</a></dd>
+        </div>
 
       </div>
-    </footer> -->
+    </section>
 
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script> -->
     <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script> -->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
 
   </body>
 </html>
